CANDLEPIN-840: Added endpoints for environment content overrides
- Added endpoints for managing environment content overrides
- Updated consumer content override fetching to include layered
  overrides from any environments applicable to the consumer
- Removed .setParent from ContentOverride and its subclasses
- Updated the migration of content overrides from activation keys
  to consumers in ConsumerBindUtil to no longer fetch and persist
  each override individually (or multiple times)
- Added tests and updated testing logic where applicable