@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2009 - 2023 Red Hat, Inc.
+ * Copyright (c) 2009 - 2024 Red Hat, Inc.
  *
  * This software is licensed to you under the GNU General Public License,
  * version 2 (GPLv2). There is NO WARRANTY for this software, express or
@@ -17,21 +17,22 @@ package org.candlepin.resource;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertTrue;
-import static org.mockito.Mockito.any;
-import static org.mockito.Mockito.when;
 
-import org.candlepin.auth.Access;
-import org.candlepin.auth.Principal;
-import org.candlepin.auth.SubResource;
+import org.candlepin.async.JobManager;
+import org.candlepin.controller.ContentAccessManager;
+import org.candlepin.controller.EntitlementCertificateService;
+import org.candlepin.controller.PoolService;
 import org.candlepin.dto.api.server.v1.ContentOverrideDTO;
 import org.candlepin.exceptions.BadRequestException;
 import org.candlepin.model.ContentOverride;
+import org.candlepin.model.Environment;
+import org.candlepin.model.EnvironmentContentOverride;
 import org.candlepin.model.Owner;
-import org.candlepin.model.activationkeys.ActivationKey;
-import org.candlepin.model.activationkeys.ActivationKeyContentOverride;
+import org.candlepin.resource.validation.DTOValidator;
 import org.candlepin.test.DatabaseTestFixture;
+import org.candlepin.util.ContentOverrideValidator;
+import org.candlepin.util.RdbmsExceptionTranslator;
 
-import org.jboss.resteasy.core.ResteasyContext;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -42,54 +43,81 @@ import org.mockito.junit.jupiter.MockitoExtension;
 import org.mockito.junit.jupiter.MockitoSettings;
 import org.mockito.quality.Strictness;
 
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.LinkedList;
+import java.util.ArrayList;
 import java.util.List;
 
 
 
-/**
- * ActivationKeyContentOverrideResourceTest
- */
 @ExtendWith(MockitoExtension.class)
 @MockitoSettings(strictness = Strictness.LENIENT)
-@SuppressWarnings("checkstyle:indentation")
-public class ActivationKeyContentOverrideResourceTest extends DatabaseTestFixture {
+public class EnvironmentContentOverrideResourceTest extends DatabaseTestFixture {
 
+    // TODO: Stop mocking these if we actually start hitting operations that utilize them in this
+    // suite.
     @Mock
-    private Principal principal;
+    private ConsumerResource mockConsumerResource;
+    @Mock
+    private PoolService mockPoolService;
+    @Mock
+    private RdbmsExceptionTranslator mockRdbmsExceptionTranslator;
+    @Mock
+    private JobManager mockJobManager;
+    @Mock
+    private ContentAccessManager mockContentAccessManager;
+    @Mock
+    private EntitlementCertificateService mockEntitlementCertService;
 
-    private ActivationKeyResource resource;
+    private DTOValidator dtoValidator;
+    private ContentOverrideValidator contentOverrideValidator;
+
 
     @BeforeEach
-    public void setUp() {
-        ResteasyContext.pushContext(Principal.class, principal);
+    public void init() throws Exception {
+        super.init();
 
-        when(this.principal.canAccess(any(Object.class), any(SubResource.class), any(Access.class)))
-            .thenReturn(true);
-
-        this.resource = injector.getInstance(ActivationKeyResource.class);
+        this.dtoValidator = new DTOValidator(this.i18n);
+        this.contentOverrideValidator = new ContentOverrideValidator(this.config, this.i18n);
     }
 
-    private ActivationKey createActivationKey() {
+    private EnvironmentResource buildResource() {
+        return new EnvironmentResource(
+            this.environmentCurator,
+            this.i18n,
+            this.environmentContentCurator,
+            this.mockConsumerResource,
+            this.mockPoolService,
+            this.consumerCurator,
+            this.contentCurator,
+            this.mockRdbmsExceptionTranslator,
+            this.modelTranslator,
+            this.mockJobManager,
+            this.dtoValidator,
+            this.contentOverrideValidator,
+            this.mockContentAccessManager,
+            this.certSerialCurator,
+            this.identityCertificateCurator,
+            this.caCertCurator,
+            this.entitlementCurator,
+            this.mockEntitlementCertService,
+            this.environmentContentOverrideCurator);
+    }
+
+    private Environment createEnvironment() {
         Owner owner = this.createOwner();
-        return this.createActivationKey(owner);
+        return this.createEnvironment(owner);
     }
 
-    private List<ActivationKeyContentOverride> createOverrides(ActivationKey key, int offset,
-        int count) {
-
-        List<ActivationKeyContentOverride> overrides = new LinkedList<>();
+    private List<EnvironmentContentOverride> createOverrides(Environment parent, int offset, int count) {
+        List<EnvironmentContentOverride> overrides = new ArrayList<>();
 
         for (int i = offset; i < offset + count; ++i) {
-            ActivationKeyContentOverride akco = new ActivationKeyContentOverride()
-                .setKey(key)
+            EnvironmentContentOverride override = new EnvironmentContentOverride()
+                .setEnvironment(parent)
                 .setContentLabel("content_label-" + i)
                 .setName("override_name-" + i)
                 .setValue("override_value-" + i);
 
-            overrides.add(this.activationKeyContentOverrideCurator.create(akco));
+            overrides.add(this.environmentContentOverrideCurator.create(override));
         }
 
         return overrides;
@@ -97,15 +125,15 @@ public class ActivationKeyContentOverrideResourceTest extends DatabaseTestFixtur
 
     @Test
     public void testGetOverrides() {
-        ActivationKey key = this.createActivationKey();
+        EnvironmentResource resource = this.buildResource();
+        Environment environment = this.createEnvironment();
+        List<EnvironmentContentOverride> overrides = this.createOverrides(environment, 1, 3);
 
-        List<ActivationKeyContentOverride> overrides = this.createOverrides(key, 1, 3);
         List<ContentOverrideDTO> expected = overrides.stream()
             .map(this.modelTranslator.getStreamMapper(ContentOverride.class, ContentOverrideDTO.class))
             .toList();
 
-        List<ContentOverrideDTO> actual = this.resource
-            .listActivationKeyContentOverrides(key.getId())
+        List<ContentOverrideDTO> actual = resource.getEnvironmentContentOverrides(environment.getId())
             .toList();
 
         assertThat(actual)
@@ -115,10 +143,10 @@ public class ActivationKeyContentOverrideResourceTest extends DatabaseTestFixtur
 
     @Test
     public void testGetOverridesEmptyList() {
-        ActivationKey key = this.createActivationKey();
+        EnvironmentResource resource = this.buildResource();
+        Environment environment = this.createEnvironment();
 
-        List<ContentOverrideDTO> actual = this.resource
-            .listActivationKeyContentOverrides(key.getId())
+        List<ContentOverrideDTO> actual = resource.getEnvironmentContentOverrides(environment.getId())
             .toList();
 
         assertTrue(actual.isEmpty());
@@ -126,10 +154,11 @@ public class ActivationKeyContentOverrideResourceTest extends DatabaseTestFixtur
 
     @Test
     public void testDeleteOverrideUsingName() {
-        ActivationKey key = this.createActivationKey();
-        List<ActivationKeyContentOverride> overrides = this.createOverrides(key, 1, 3);
+        EnvironmentResource resource = this.buildResource();
+        Environment environment = this.createEnvironment();
+        List<EnvironmentContentOverride> overrides = this.createOverrides(environment, 1, 3);
 
-        ActivationKeyContentOverride toDelete = overrides.remove(1);
+        EnvironmentContentOverride toDelete = overrides.remove(1);
         ContentOverrideDTO toDeleteDTO = new ContentOverrideDTO()
             .contentLabel(toDelete.getContentLabel())
             .name(toDelete.getName());
@@ -138,8 +167,8 @@ public class ActivationKeyContentOverrideResourceTest extends DatabaseTestFixtur
             .map(this.modelTranslator.getStreamMapper(ContentOverride.class, ContentOverrideDTO.class))
             .toList();
 
-        List<ContentOverrideDTO> actual = this.resource
-            .deleteActivationKeyContentOverrides(key.getId(), Arrays.asList(toDeleteDTO))
+        List<ContentOverrideDTO> actual = resource
+            .deleteEnvironmentContentOverrides(environment.getId(), List.of(toDeleteDTO))
             .toList();
 
         assertThat(actual)
@@ -149,10 +178,11 @@ public class ActivationKeyContentOverrideResourceTest extends DatabaseTestFixtur
 
     @Test
     public void testDeleteOverridesUsingContentLabel() {
-        ActivationKey key = this.createActivationKey();
-        List<ActivationKeyContentOverride> overrides = this.createOverrides(key, 1, 3);
+        EnvironmentResource resource = this.buildResource();
+        Environment environment = this.createEnvironment();
+        List<EnvironmentContentOverride> overrides = this.createOverrides(environment, 1, 3);
 
-        ActivationKeyContentOverride toDelete = overrides.remove(1);
+        EnvironmentContentOverride toDelete = overrides.remove(1);
         ContentOverrideDTO toDeleteDTO = new ContentOverrideDTO()
             .contentLabel(toDelete.getContentLabel());
 
@@ -160,8 +190,8 @@ public class ActivationKeyContentOverrideResourceTest extends DatabaseTestFixtur
             .map(this.modelTranslator.getStreamMapper(ContentOverride.class, ContentOverrideDTO.class))
             .toList();
 
-        List<ContentOverrideDTO> actual = this.resource
-            .deleteActivationKeyContentOverrides(key.getId(), Arrays.asList(toDeleteDTO))
+        List<ContentOverrideDTO> actual = resource
+            .deleteEnvironmentContentOverrides(environment.getId(), List.of(toDeleteDTO))
             .toList();
 
         assertThat(actual)
@@ -171,11 +201,12 @@ public class ActivationKeyContentOverrideResourceTest extends DatabaseTestFixtur
 
     @Test
     public void testDeleteAllOverridesUsingEmptyList() {
-        ActivationKey key = this.createActivationKey();
-        this.createOverrides(key, 1, 3);
+        EnvironmentResource resource = this.buildResource();
+        Environment environment = this.createEnvironment();
+        List<EnvironmentContentOverride> overrides = this.createOverrides(environment, 1, 3);
 
-        List<ContentOverrideDTO> actual = this.resource
-            .deleteActivationKeyContentOverrides(key.getId(), Collections.emptyList())
+        List<ContentOverrideDTO> actual = resource
+            .deleteEnvironmentContentOverrides(environment.getId(), List.of())
             .toList();
 
         assertTrue(actual.isEmpty());
@@ -183,11 +214,12 @@ public class ActivationKeyContentOverrideResourceTest extends DatabaseTestFixtur
 
     @Test
     public void testDeleteAllOverridesUsingEmptyContentLabel() {
-        ActivationKey key = this.createActivationKey();
-        this.createOverrides(key, 1, 3);
+        EnvironmentResource resource = this.buildResource();
+        Environment environment = this.createEnvironment();
+        List<EnvironmentContentOverride> overrides = this.createOverrides(environment, 1, 3);
 
-        List<ContentOverrideDTO> actual = this.resource
-            .deleteActivationKeyContentOverrides(key.getId(), Collections.emptyList())
+        List<ContentOverrideDTO> actual = resource
+            .deleteEnvironmentContentOverrides(environment.getId(), List.of())
             .toList();
 
         assertTrue(actual.isEmpty());
@@ -195,18 +227,20 @@ public class ActivationKeyContentOverrideResourceTest extends DatabaseTestFixtur
 
     @Test
     public void testAddOverride() {
-        ActivationKey activationkey = this.createActivationKey();
+        EnvironmentResource resource = this.buildResource();
+        Environment environment = this.createEnvironment();
 
         ContentOverrideDTO dto1 = new ContentOverrideDTO()
             .contentLabel("test_label")
             .name("override_name")
             .value("override_value");
 
-        List<ContentOverrideDTO> output1 = this.resource
-            .addActivationKeyContentOverrides(activationkey.getId(), List.of(dto1))
+        List<ContentOverrideDTO> output1 = resource
+            .putEnvironmentContentOverrides(environment.getId(), List.of(dto1))
             .toList();
 
         assertThat(output1)
+            .hasSize(1)
             .usingRecursiveFieldByFieldElementComparatorIgnoringFields("created", "updated")
             .containsExactlyInAnyOrder(dto1);
 
@@ -216,8 +250,8 @@ public class ActivationKeyContentOverrideResourceTest extends DatabaseTestFixtur
             .name("override_name-2")
             .value("override_value-2");
 
-        List<ContentOverrideDTO> output2 = this.resource
-            .addActivationKeyContentOverrides(activationkey.getId(), List.of(dto2))
+        List<ContentOverrideDTO> output2 = resource
+            .putEnvironmentContentOverrides(environment.getId(), List.of(dto2))
             .toList();
 
         assertThat(output2)
@@ -227,15 +261,16 @@ public class ActivationKeyContentOverrideResourceTest extends DatabaseTestFixtur
 
     @Test
     public void testAddOverrideOverwritesExistingWhenMatched() {
-        ActivationKey activationkey = this.createActivationKey();
+        EnvironmentResource resource = this.buildResource();
+        Environment environment = this.createEnvironment();
 
         ContentOverrideDTO dto1 = new ContentOverrideDTO()
             .contentLabel("test_label")
             .name("override_name")
             .value("override_value");
 
-        List<ContentOverrideDTO> output1 = this.resource
-            .addActivationKeyContentOverrides(activationkey.getId(), List.of(dto1))
+        List<ContentOverrideDTO> output1 = resource
+            .putEnvironmentContentOverrides(environment.getId(), List.of(dto1))
             .toList();
 
         assertThat(output1)
@@ -249,8 +284,8 @@ public class ActivationKeyContentOverrideResourceTest extends DatabaseTestFixtur
             .name("override_name")
             .value("override_value-2");
 
-        List<ContentOverrideDTO> output2 = this.resource
-            .addActivationKeyContentOverrides(activationkey.getId(), List.of(dto2))
+        List<ContentOverrideDTO> output2 = resource
+            .putEnvironmentContentOverrides(environment.getId(), List.of(dto2))
             .toList();
 
         assertThat(output2)
@@ -260,19 +295,22 @@ public class ActivationKeyContentOverrideResourceTest extends DatabaseTestFixtur
 
     @Test
     public void testAddOverrideFailsValidationWithNoParent() {
+        EnvironmentResource resource = this.buildResource();
+
         ContentOverrideDTO dto = new ContentOverrideDTO()
             .contentLabel("test_label")
             .name("override_name")
             .value("override_value");
 
         assertThrows(BadRequestException.class,
-            () -> this.resource.addActivationKeyContentOverrides(null, List.of(dto)));
+            () -> resource.putEnvironmentContentOverrides(null, List.of(dto)));
     }
 
     @ParameterizedTest
     @NullAndEmptySource
     public void testAddOverrideFailsValidationWithNullOrEmptyLabel(String label) {
-        ActivationKey activationkey = this.createActivationKey();
+        EnvironmentResource resource = this.buildResource();
+        Environment environment = this.createEnvironment();
 
         ContentOverrideDTO dto = new ContentOverrideDTO()
             .contentLabel(label)
@@ -280,12 +318,13 @@ public class ActivationKeyContentOverrideResourceTest extends DatabaseTestFixtur
             .value("override_value");
 
         assertThrows(BadRequestException.class,
-            () -> this.resource.addActivationKeyContentOverrides(activationkey.getId(), List.of(dto)));
+            () -> resource.putEnvironmentContentOverrides(environment.getId(), List.of(dto)));
     }
 
     @Test
     public void testAddOverrideFailsValidationWithLongLabel() {
-        ActivationKey activationkey = this.createActivationKey();
+        EnvironmentResource resource = this.buildResource();
+        Environment environment = this.createEnvironment();
 
         String longString = "a".repeat(ContentOverride.MAX_NAME_AND_LABEL_LENGTH + 1);
 
@@ -295,13 +334,14 @@ public class ActivationKeyContentOverrideResourceTest extends DatabaseTestFixtur
             .value("override_value");
 
         assertThrows(BadRequestException.class,
-            () -> this.resource.addActivationKeyContentOverrides(activationkey.getId(), List.of(dto)));
+            () -> resource.putEnvironmentContentOverrides(environment.getId(), List.of(dto)));
     }
 
     @ParameterizedTest
     @NullAndEmptySource
     public void testAddOverrideFailsValidationWithNullOrEmptyName(String name) {
-        ActivationKey activationkey = this.createActivationKey();
+        EnvironmentResource resource = this.buildResource();
+        Environment environment = this.createEnvironment();
 
         ContentOverrideDTO dto = new ContentOverrideDTO()
             .contentLabel("content_label")
@@ -309,12 +349,13 @@ public class ActivationKeyContentOverrideResourceTest extends DatabaseTestFixtur
             .value("override_value");
 
         assertThrows(BadRequestException.class,
-            () -> this.resource.addActivationKeyContentOverrides(activationkey.getId(), List.of(dto)));
+            () -> resource.putEnvironmentContentOverrides(environment.getId(), List.of(dto)));
     }
 
     @Test
     public void testAddOverrideFailsValidationWithLongName() {
-        ActivationKey activationkey = this.createActivationKey();
+        EnvironmentResource resource = this.buildResource();
+        Environment environment = this.createEnvironment();
 
         String longString = "a".repeat(ContentOverride.MAX_NAME_AND_LABEL_LENGTH + 1);
 
@@ -324,13 +365,14 @@ public class ActivationKeyContentOverrideResourceTest extends DatabaseTestFixtur
             .value("override_value");
 
         assertThrows(BadRequestException.class,
-            () -> this.resource.addActivationKeyContentOverrides(activationkey.getId(), List.of(dto)));
+            () -> resource.putEnvironmentContentOverrides(environment.getId(), List.of(dto)));
     }
 
     @ParameterizedTest
     @NullAndEmptySource
     public void testAddOverrideFailsValidationWithNullOrEmptyValue(String value) {
-        ActivationKey activationkey = this.createActivationKey();
+        EnvironmentResource resource = this.buildResource();
+        Environment environment = this.createEnvironment();
 
         ContentOverrideDTO dto = new ContentOverrideDTO()
             .contentLabel("content_label")
@@ -338,12 +380,13 @@ public class ActivationKeyContentOverrideResourceTest extends DatabaseTestFixtur
             .value(value);
 
         assertThrows(BadRequestException.class,
-            () -> this.resource.addActivationKeyContentOverrides(activationkey.getId(), List.of(dto)));
+            () -> resource.putEnvironmentContentOverrides(environment.getId(), List.of(dto)));
     }
 
     @Test
     public void testAddOverrideFailsValidationWithLongValue() {
-        ActivationKey activationkey = this.createActivationKey();
+        EnvironmentResource resource = this.buildResource();
+        Environment environment = this.createEnvironment();
 
         String longString = "a".repeat(ContentOverride.MAX_VALUE_LENGTH + 1);
 
@@ -353,6 +396,6 @@ public class ActivationKeyContentOverrideResourceTest extends DatabaseTestFixtur
             .value(longString);
 
         assertThrows(BadRequestException.class,
-            () -> this.resource.addActivationKeyContentOverrides(activationkey.getId(), List.of(dto)));
+            () -> resource.putEnvironmentContentOverrides(environment.getId(), List.of(dto)));
     }
 }
